test/spec_vectors/memory/fail/module_29.wat
(module (memory (import "M" "m") 4294967296))